--- a/css/inputs.css
+++ b/css/inputs.css
@@ -8,9 +8,10 @@ input[type=number]{
 }
 
 #keyPrimary{
-    position: absolute;
+    position: relative;
     top: 50%;
     transform: translateY(-50%); 
+    margin-left:-18em;
 }
 @media screen and (min-width:320px) and (max-width:1280px) and (orientation:portrait) {
 
@@ -26,6 +27,11 @@ input[type=number]{
     #colLine{
         margin-left: -3em;
     }
+    #keyPrimary{
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%); 
+    }
     
     
 }
@@ -39,6 +45,11 @@ input[type=number]{
         position: absolute;
         top:0;
         left:0;
+    }
+    #keyPrimary{
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%); 
     }
     
     
