--- a/css/inputs.css
+++ b/css/inputs.css
@@ -9,38 +9,67 @@ input[type=number]{
 
 #keyPrimary{
     position: relative;
-    top: 50%;
-    transform: translateY(-50%); 
+    top: 42%;
+    transform: translateY(-45%); 
+    transform: translateX(-40%); 
     margin-left:-18em;
 }
-@media screen and (min-width:320px) and (max-width:1280px) and (orientation:portrait) {
+@media screen and (min-width:320px) and (max-width:780px) and (orientation:portrait) {
 
     html{
         transform: rotate(-90);
         transform-origin: left top;
-        width: 120vh;
+        width: 200vh;
         overflow-y: hidden;
         position: absolute;
         top:0;
         left:0;
     }
     #colLine{
-        margin-left: -3em;
+        margin-left: -10em;
     }
     #keyPrimary{
         position: absolute;
         top: 50%;
         transform: translateY(-50%); 
+        transform: translateX(-40%); 
+       
     }
     
     
 }
-@media screen and (min-width:320px) and (max-width:1280px) and (orientation:landscape) {
+@media screen and (min-width:320px) and (max-width:780px) and (orientation:landscape) {
 
     html{
-      
+       
         transform-origin: left top;
-        width: 150vw;
+        width: 400vw;
+        overflow-y: hidden;
+        position: absolute;
+        top:0;
+        left:0;
+    }
+    #colLine{
+        margin-left: -1em;
+    }
+    #keyPrimary{
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%); 
+        transform: translateX(-35%); 
+
+       
+    }
+    
+    
+}
+
+@media screen and (min-width:790px) and (max-width:1280px) and (orientation:portrait) {
+
+    html{
+        transform: rotate(-90);
+        transform-origin: left top;
+        width: 200vh;
         overflow-y: hidden;
         position: absolute;
         top:0;
@@ -48,8 +77,41 @@ input[type=number]{
     }
     #keyPrimary{
         position: absolute;
-        top: 50%;
+        top: 48%;
         transform: translateY(-50%); 
+        transform: translateX(-30%); 
+         
+        
+       
+    }
+    #colLine{
+        margin-left: -3em;
+    }
+    
+    
+}
+@media screen and (min-width:790px) and (max-width:1280px) and (orientation:portrait) {
+
+    html{
+        transform: rotate(-90);
+        transform-origin: left top;
+        width: 200vw;
+        overflow-y: hidden;
+        position: absolute;
+        top:0;
+        left:0;
+    }
+    #keyPrimary{
+        position: absolute;
+        top: 48%;
+        transform: translateY(-50%); 
+        transform: translateX(-30%); 
+         
+        
+       
+    }
+    #colLine{
+        margin-left: -4em;
     }
     
     
