--- a/css/inputs.css
+++ b/css/inputs.css
@@ -11,8 +11,8 @@ input[type=number]{
     position: relative;
     top: 42%;
     transform: translateY(-45%); 
-    transform: translateX(-40%); 
-    margin-left:-18em;
+    transform: translateX(-100%); 
+    margin-left:-22em;
 }
 @media screen and (min-width:320px) and (max-width:780px) and (orientation:portrait) {
 
@@ -33,6 +33,7 @@ input[type=number]{
         top: 50%;
         transform: translateY(-50%); 
         transform: translateX(-40%); 
+        margin-left: -38em;
        
     }
     
@@ -43,7 +44,7 @@ input[type=number]{
     html{
        
         transform-origin: left top;
-        width: 400vw;
+        width: 500vw;
         overflow-y: hidden;
         position: absolute;
         top:0;
@@ -57,7 +58,7 @@ input[type=number]{
         top: 50%;
         transform: translateY(-50%); 
         transform: translateX(-35%); 
-
+        
        
     }
     
@@ -79,8 +80,8 @@ input[type=number]{
         position: absolute;
         top: 48%;
         transform: translateY(-50%); 
-        transform: translateX(-30%); 
-         
+        transform: translateX(-10%); 
+        
         
        
     }
@@ -90,7 +91,7 @@ input[type=number]{
     
     
 }
-@media screen and (min-width:790px) and (max-width:1280px) and (orientation:portrait) {
+@media screen and (min-width:790px) and (max-width:1280px) and (orientation:landscape) {
 
     html{
         transform: rotate(-90);
@@ -105,13 +106,13 @@ input[type=number]{
         position: absolute;
         top: 48%;
         transform: translateY(-50%); 
-        transform: translateX(-30%); 
-         
+        transform: translateX(-10%); 
+        margin-left: -42em;
         
        
     }
     #colLine{
-        margin-left: -4em;
+        margin-left: -1em;
     }
     
     
